# graphics_engine

./: BRAINLESS  CMakeLists.txt  shader.cpp
.cache/clangd/index/: glad.c.86114E626FE3F7FB.idx  glad.h.7A1A20A184BFFF06.idx  main.cpp.6FD7FB7591E37852.idx
Grapixy/: input.h  pixygl.h  pixymath.h  window.c  window.h
Grapixy/Dependencies/: glad.h
Grapixy/shaders/: shader.h
Shaders/: Shader.frag  Shader.vert
docs/: window.txt
shaders/: fragment.frag  shader.h  vertex.vert
src/: Glcommon.h  Hopmath.h  cam.cpp  camera.h  dependencies.h  glad.c  main.cpp  model.h  texture.h  time.h  window.c  window.h
